--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,176 +1,177 @@
-.about-body{
-    background-color: rgba(10, 25, 49, 0.8);
-    position: relative;
-    z-index: 1;
-    margin-top: -16rem;
-    height: fit-content;
-    padding: 5rem 0;
-    /* margin:0; */
+.about-body {
+  background-color: rgba(10, 25, 49, 0.8);
+  position: relative;
+  z-index: 1;
+  margin-top: -16rem;
+  height: fit-content;
+  padding: 5rem 0;
+  /* margin:0; */
 }
 .about-title-body {
-    z-index: 100;
-    text-align: center;
+  z-index: 100;
+  text-align: center;
 }
 
-.about-subheading{
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 1rem;
-    padding-top: 10px;
-    color: #57b8ff;
-    letter-spacing: 0.5em;
-    margin-top: 13rem;
-    margin-bottom: 10px;
+.about-subheading {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+  padding-top: 10px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
+  margin-top: 13rem;
+  margin-bottom: 10px;
 }
 
-.about-seperator{
-    display: flex;
-    margin: auto;
-    margin-bottom: 2rem;
+.about-seperator {
+  display: flex;
+  margin: auto;
+  margin-bottom: 2rem;
 }
-.about-seperator2{
-    display: flex;
-    margin: auto;
-    margin-bottom: 2rem;
-    width: 92.5%;
+.about-seperator2 {
+  display: flex;
+  margin: auto;
+  margin-bottom: 2rem;
+  width: 92.5%;
 }
 
 .about-title-line2 {
-    height: 3px;
-    width: 39.1%;
-    color: white;
-    z-index: 30000;
-    margin: auto;
-    background-color: azure;
-    text-align: left;
-    margin-left: 0;
+  height: 3px;
+  width: 39.1%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-left: 0;
 }
 
 .about-title-line1 {
-    height: 3px;
-    width: 39.1%;
-    color: white;
-    z-index: 30000;
-    margin: auto;
-    background-color: azure;
-    text-align: left;
-    margin-right: 0;
+  height: 3px;
+  width: 39.1%;
+  color: white;
+  z-index: 30000;
+  margin: auto;
+  background-color: azure;
+  text-align: left;
+  margin-right: 0;
 }
-.about-heading{
-    font-family: "Rowdies", cursive;
-    font-size: 2.5rem;
-    padding: 20px;
-    white-space: nowrap;
+.about-heading {
+  font-family: "Rowdies", cursive;
+  font-size: 2.5rem;
+  padding: 20px;
+  white-space: nowrap;
+  font-family: SansationBold;
 }
 .about-content {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  z-index: 1;
+  margin: 0 8rem;
+}
+
+.about-content-first-row,
+.about-content-second-row {
+  display: flex;
+  width: 98%;
+  flex: 1;
+}
+
+.neumeric-info-boxes {
+  /* margin-left: 1rem; */
+  flex: 2;
+  display: flex;
+  flex-direction: row;
+}
+
+.neumeric-info-boxes :nth-child(1) {
+  flex: 1;
+}
+.neumeric-info-boxes :nth-child(2) {
+  flex: 1;
+}
+
+.neumeric-info-row-1 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 95%;
+  /* justify-content: center; */
+}
+
+.neumeric-info-row-1 :nth-child(1),
+.neumeric-info-row-1 :nth-child(2) {
+  flex: 1;
+}
+.neumeric-info-row-1 :nth-child(1) {
+  margin-top: 0.1rem;
+}
+
+.neumeric-info-row-2 {
+  margin-left: 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 95%;
+  /* justify-content: center; */
+}
+
+.neumeric-info-row-2 :nth-child(1),
+.neumeric-info-row-2 :nth-child(2) {
+  flex: 1;
+}
+.neumeric-info-row-2 :nth-child(1) {
+  margin-top: 0.1rem;
+}
+
+.about-subheading2 {
+  margin-top: 0;
+}
+
+.about-content-first-row :nth-child(2) {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 770px) {
+  .about-content-first-row,
+  .about-content-second-row,
+  .neumeric-info-boxes,
+  .about-department-grid {
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    z-index: 1;
-    margin:0 8rem;
-}
+  }
+  .neumeric-info-boxes {
+    align-items: stretch;
+  }
 
-.about-content-first-row,.about-content-second-row{
-    display: flex;
-    width: 98%;
-    flex: 1;
-}
+  .neumeric-info-boxes {
+    width: 90%;
+  }
+  .neumeric-info-row-1 {
+    align-items: stretch;
+    width: 100%;
+  }
+  .neumeric-info-row-2 {
+    margin-left: 0;
+  }
 
-.neumeric-info-boxes{
-    /* margin-left: 1rem; */
-    flex: 2;
-    display: flex;
-    flex-direction: row;
-}
-
-.neumeric-info-boxes :nth-child(1){
-    flex: 1;
-}
-.neumeric-info-boxes :nth-child(2){
-    flex: 1;
-}
-
-.neumeric-info-row-1{
-    flex: 1;
+  .neumeric-info {
+    text-align: center;
+  }
+  .neumeric-card-title {
+    text-align: center;
+  }
+  .about-department-grid {
     display: flex;
     flex-direction: column;
-    height: 95%;
-    /* justify-content: center; */
-}
+    width: 80%;
+  }
 
-.neumeric-info-row-1 :nth-child(1),.neumeric-info-row-1 :nth-child(2){
-    flex: 1;
-}
-.neumeric-info-row-1 :nth-child(1){
-    margin-top: 0.1rem;
-}
-
-
-
-.neumeric-info-row-2{
-    margin-left: 1rem;
-    flex: 1;
-    display: flex; 
-    flex-direction: column;
-    height: 95%;
-    /* justify-content: center; */
-}
-
-.neumeric-info-row-2 :nth-child(1),.neumeric-info-row-2 :nth-child(2){
-    flex: 1;
-}
-.neumeric-info-row-2 :nth-child(1){
-    margin-top: 0.1rem;
-}
-
-
-.about-subheading2{
-    margin-top: 0;
-}
-
-
-
-.about-content-first-row :nth-child(2){
-    margin-right: 0;
-}
-
-@media screen and (max-width:770px) {
-    .about-content-first-row,.about-content-second-row,.neumeric-info-boxes,.about-department-grid{
-        flex-direction: column;
-        align-items: center;
-    }
-    .neumeric-info-boxes{
-        align-items: stretch;
-    }
-
-    .neumeric-info-boxes{
-        width: 90%;
-    }
-    .neumeric-info-row-1{
-        align-items: stretch;
-        width: 100%;
-    }
-    .neumeric-info-row-2{
-        margin-left: 0;
-    }
-
-    .neumeric-info{
-        text-align: center;
-    }
-    .neumeric-card-title{
-        text-align:center;
-    }
-    .about-department-grid{
-        display: flex;
-        flex-direction: column;
-        width: 80%;
-    }
-
-    .about-department-icon {
-        max-width: 30px;
-    }
-    .about-content{
-        margin: 0;
-    }
-
+  .about-department-icon {
+    max-width: 30px;
+  }
+  .about-content {
+    margin: 0;
+  }
 }
