--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,5 +1,5 @@
 /* CONTACT FORM MAIN HEADLINES */
-.contact_main_body{
+.contact_main_body {
   margin-top: -6rem;
   background-color: rgba(10, 25, 49, 0.8);
   position: relative;
@@ -8,10 +8,10 @@
   padding-top: 6.5rem;
   padding-bottom: 0.3rem;
 }
-.contact_main_body2{
-    background-color: rgba(10, 25, 49, 0.8);
-    height: auto;
-    padding-bottom: 0.1rem;
+.contact_main_body2 {
+  background-color: rgba(10, 25, 49, 0.8);
+  height: auto;
+  padding-bottom: 0.1rem;
 }
 .contact_headline_div {
   text-align: center;
@@ -35,7 +35,8 @@
 .contact_topic {
   text-align: center;
 }
-.contactusline1, .contactusline2 {
+.contactusline1,
+.contactusline2 {
   height: 3px;
   width: 29.5%;
   margin-top: 40px;
@@ -88,10 +89,10 @@ input[type="email"] {
   margin-top: 10px;
 }*/
 
-.contact_para{
-    color: white;
+.contact_para {
+  color: white;
 }
-.contact_sendbtn{
+.contact_sendbtn {
   margin-top: 10px;
   background-color: #2196f3;
   padding: 10px;
@@ -102,7 +103,7 @@ input[type="email"] {
   font-size: 1rem;
   transition: all 0.3s ease;
 }
-.contact_joinnowbtn{
+.contact_joinnowbtn {
   margin-top: 10px;
   background-color: #0d8bf1;
   padding: 10px;
@@ -113,7 +114,8 @@ input[type="email"] {
   width: 30%;
   transition: all 0.3s ease;
 }
-.contact_sendbtn:hover, .contact_joinnowbtn:hover {
+.contact_sendbtn:hover,
+.contact_joinnowbtn:hover {
   border: 2px solid rgb(0, 162, 255);
   background-color: rgb(31, 30, 30);
   color: rgb(237, 240, 241);
@@ -149,8 +151,8 @@ form {
   align-items: center;
   height: 10vh;
 }
-.forces2{
-    margin-top: 0px;
+.forces2 {
+  margin-top: 0px;
 }
 .contact_infoemail,
 .contact_infophone,
@@ -178,8 +180,9 @@ img {
   font-family: "Rowdies", cursive;
   font-size: 2.5rem;
   padding: 20px;
+  font-family: SansationBold;
 }
-.fillform2{
+.fillform2 {
   font-size: 1.3rem;
 }
 .contact_info_subhead {
@@ -188,7 +191,7 @@ img {
   display: inline;
   position: relative;
 }
-.contact_para{
+.contact_para {
   position: relative;
   width: 40vw;
   margin: 5px;
@@ -199,15 +202,13 @@ img {
   font-size: medium;
 }
 
-.jointeam_img{
+.jointeam_img {
   box-sizing: border-box;
-  width:350px;
+  width: 350px;
   height: 250px;
   margin-right: 3rem;
   margin-top: -6rem;
 }
-
-
 
 /* MEDIA QUERIES */
 @media (max-width: 940px) {
@@ -215,16 +216,16 @@ img {
     width: 81vw;
   }
   [data-aos-delay] {
-      transition-delay: 0s !important;
-    }
-  .contact_headline_div{
+    transition-delay: 0s !important;
+  }
+  .contact_headline_div {
     margin-top: 1.3rem;
   }
   input[type="text"],
   input[type="email"] {
     width: 100%;
   }
-  .contact-para{
+  .contact-para {
     width: 55vw;
   }
   .contact_name_email_div {
@@ -243,7 +244,7 @@ img {
     width: 72vw;
     margin: 5px 0px;
   }
-  .contact_form_name{
+  .contact_form_name {
     position: relative;
     /* width: 100%; */
   }
@@ -279,7 +280,7 @@ img {
   .contact_textarea {
     width: 100%;
   }
-  .forces2{
+  .forces2 {
     margin-top: -6px;
   }
   .contact_form_textarea_div {
@@ -287,7 +288,8 @@ img {
     align-items: center;
     margin: 0px;
   }
-  .contact_sendbtn,.contact_joinnowbtn {
+  .contact_sendbtn,
+  .contact_joinnowbtn {
     margin-top: 18px;
     /* padding: 8px; */
     border-radius: 10px;
@@ -297,12 +299,12 @@ img {
   .contact_info_headline {
     font-size: 1.3rem;
   }
-  .join_team{
+  .join_team {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  .fillform2{
+  .fillform2 {
     font-size: 17px;
   }
   form {
