--- a/src/Components/Home Projects/Project-home.css
+++ b/src/Components/Home Projects/Project-home.css
@@ -29,6 +29,7 @@
 .home-project-title-our-project {
   font-family: "Rowdies", cursive;
   font-size: 2.5rem;
+  font-family: SansationBold;
   padding: 20px;
 }
 
