--- a/src/Components/Projects/Project.css
+++ b/src/Components/Projects/Project.css
@@ -19,27 +19,24 @@
   width:5rem;
 } */
 
-
-.proj_container{
+.proj_container {
   display: flex;
   align-items: center;
   justify-content: center;
   border: 2px solid black;
 }
 
-.project-headerupcoming{
+.project-headerupcoming {
   padding-top: 12.4rem;
   text-align: center;
   margin-bottom: 30px;
 }
-
 
 .project-header {
   padding-top: 0.4rem;
   text-align: center;
   margin-bottom: 30px;
 }
-
 
 .project-moto {
   font-family: "Roboto Condensed", sans-serif;
@@ -53,6 +50,7 @@
   font-family: "Rowdies", cursive;
   font-size: 2.5rem;
   padding: 20px;
+  font-family: SansationBold;
 }
 
 .project-section {
@@ -78,7 +76,7 @@
   text-align: left;
   margin-right: 0;
 }
-.projectsupcomingcontainer{
+.projectsupcomingcontainer {
   margin: 0 40px;
   display: flex;
   align-items: left;
