--- a/src/Components/Team/team.css
+++ b/src/Components/Team/team.css
@@ -1,170 +1,174 @@
-
-.about-department-grid{
-    display: grid;
-    gap:2em; 
-    width: 100%;
-    grid-template-columns: 1fr 1fr 1fr ;
-    
+.about-department-grid {
+  display: grid;
+  gap: 2em;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
 }
-.about-department-link{
-    text-decoration: none;
+.about-department-link {
+  text-decoration: none;
 }
-.about-department-grid-box{
-
-    width: 100%;
-    height: 100%;
-    padding: 2rem;
-    border-radius: 1.2rem;
-    border-style: solid 4px;
-    border-color: #56b6fc;
-    /* border-color: rgb(89, 233, 238); */
-
+.about-department-grid-box {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  border-radius: 1.2rem;
+  border-style: solid 4px;
+  border-color: #56b6fc;
+  /* border-color: rgb(89, 233, 238); */
 }
 
-.team-firstbox{
-    background-color: rgba(10, 25, 49, 0.8);
-    position: relative;
-    z-index: 2;
-    margin-top: -9rem;
-    padding-bottom: 80px;
+.team-firstbox {
+  background-color: rgba(10, 25, 49, 0.8);
+  position: relative;
+  z-index: 2;
+  margin-top: -9rem;
+  padding-bottom: 80px;
 }
 
-.team-subheading{
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 1rem;
-    padding-top: 50px;
-    color: #57b8ff;
-    letter-spacing: 0.5em;
-    /* margin-top: 13rem; */
-    /* margin-bottom: 20px; */
+.team-subheading {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+  padding-top: 50px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
+  /* margin-top: 13rem; */
+  /* margin-bottom: 20px; */
 }
 
-.about-department{
+.about-department {
   padding-top: 10.4rem;
 }
-.dep_para{
-    padding-left: 10px;
-    padding-top: 10px;
+.dep_para {
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
-.about-department-icon{
-    margin: 0px;
-    max-width: 40px;
+.about-department-icon {
+  margin: 0px;
+  max-width: 40px;
 }
-.about-department-heading{
-    display: inline;
-    line-height: 0.1;
-    position: relative;
-    top:-10px;
-    padding-left: 1rem;
-    margin:10px;
-    font-family: "Rowdies", cursive;
-    font-size: 1.6rem;
-    color: #56b6fc;
-}
-
-.about-department-text{
-    font-size: 1.1rem;
-    margin-top: 0;
-    color: white;
+.about-department-heading {
+  display: inline;
+  line-height: 0.1;
+  position: relative;
+  top: -10px;
+  padding-left: 1rem;
+  margin: 10px;
+  font-family: "Rowdies", cursive;
+  font-size: 1.6rem;
+  color: #56b6fc;
+  font-family: SansationBold;
 }
 
-.about-department-grid-box{
-    /* border: 2px solid #56b6fc; */
-    transition: all 0.3s ease;
-    background-color: rgb(20,20,20);;
-    text-align: left;
+.about-department-text {
+  font-size: 1.1rem;
+  margin-top: 0;
+  color: white;
 }
 
-.about-department-grid-box:hover{
-    border-color: white;
+.about-department-grid-box {
+  /* border: 2px solid #56b6fc; */
+  transition: all 0.3s ease;
+  background-color: rgb(20, 20, 20);
+  text-align: left;
 }
 
-.about-department-grid{
-    width: 93%;
-    margin: 0 auto;
+.about-department-grid-box:hover {
+  border-color: white;
 }
 
-.dep-link{
-    background-color: #17202E;
-    border: none;
-    color: #57b8ff;
-    transition: all 0.3s ease;
-    padding: 5px 10px;
-    border-radius: 20px;
+.about-department-grid {
+  width: 93%;
+  margin: 0 auto;
 }
-.dep-button{
-    background-color: #17202E;
-    border: none;
-    color: #57b8ff;
-    transition: all 0.3s ease;
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-weight: 500;
-    letter-spacing: 0.1rem;
-    margin-top: 20px;
-    cursor: pointer;
+
+.dep-link {
+  background-color: #17202e;
+  border: none;
+  color: #57b8ff;
+  transition: all 0.3s ease;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+.dep-button {
+  background-color: #17202e;
+  border: none;
+  color: #57b8ff;
+  transition: all 0.3s ease;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+  margin-top: 20px;
+  cursor: pointer;
 }
 
 .arrow {
-    opacity: 0;
-    transition: all 0.3s ease;
-    margin-left: 8px;
+  opacity: 0;
+  transition: all 0.3s ease;
+  margin-left: 8px;
 }
 .dep-button:hover {
-    color: #ffffff;
-    background-color: #0e131b;
+  color: #ffffff;
+  background-color: #0e131b;
 }
 .dep-button:hover .arrow {
-    opacity: 1;
+  opacity: 1;
 }
-.team_robosuper_pic, .team_robo_pic, .team_work_pic{
-    width: 120vw;
-    text-align: center;
-    z-index: 100;
+.team_robosuper_pic,
+.team_robo_pic,
+.team_work_pic {
+  width: 120vw;
+  text-align: center;
+  z-index: 100;
 }
-.img1, .img2, .img3
-{
-    width: 70%;
-    z-index: 100;
+.img1,
+.img2,
+.img3 {
+  width: 70%;
+  z-index: 100;
 }
-.about-seperator3{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 92.5%;
-    margin: auto;
+.about-seperator3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 92.5%;
+  margin: auto;
 }
-.roboheading, .workheading, .robosuperheading{
-    font-family: "Rowdies", cursive;
-    font-size: 2rem;
-    color: #57b8ff;
+.roboheading,
+.workheading,
+.robosuperheading {
+  font-family: "Rowdies", cursive;
+  font-size: 2rem;
+  color: #57b8ff;
 }
-.container{
-    display: flex;
-    flex-direction: column;
+.container {
+  display: flex;
+  flex-direction: column;
 }
-.team_robocon, .team_workshop, .team_robosuper
-{
-    padding: 3%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.team_robocon,
+.team_workshop,
+.team_robosuper {
+  padding: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.mainbody_team{
-    margin-top: -6rem;
-    background-color: rgba(10, 25, 49, 0.8);
+.mainbody_team {
+  margin-top: -6rem;
+  background-color: rgba(10, 25, 49, 0.8);
 }
 
-@media(max-width: 600px)
-{
-    .roboheading, .workheading, .robosuperheading{
-        font-size: 22px;
-    }
-    .about-department-grid{
-        grid-template-columns: auto;
-    }
-    .about-heading{
-        font-size: 2rem;
-    }
+@media (max-width: 600px) {
+  .roboheading,
+  .workheading,
+  .robosuperheading {
+    font-size: 22px;
+  }
+  .about-department-grid {
+    grid-template-columns: auto;
+  }
+  .about-heading {
+    font-size: 2rem;
+  }
 }
