font changed on every page

--- a/src/Components/LandingSlide/LandingSlide.css
+++ b/src/Components/LandingSlide/LandingSlide.css
@@ -20,6 +20,7 @@
   font-size: 5rem;
   width: 50%;
   font-family: "Rowdies", cursive;
+  font-family: SansationBold;
   /* font-family: "orbitron"; */
 }
 
