--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -1,14 +1,13 @@
-.outer-event{
+.outer-event {
   position: relative;
-    /* background-color: #0a1931; */
-    background-color: rgba(10, 25, 49, 0.9);
-    z-index: 100;
+  /* background-color: #0a1931; */
+  background-color: rgba(10, 25, 49, 0.9);
+  z-index: 100;
 }
 .carousel_container {
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 .carousel {
   overflow: hidden;
@@ -43,24 +42,22 @@
   color: white;
   border: 1px solid #00a0ff;
   transition: all 0.3s ease;
-  border-radius: 300px;
+  border-radius: 50%;
   cursor: pointer;
 }
 
-button:hover{
+button:hover {
   color: white;
   border-color: white;
   background-color: #141824;
 }
-
-
 
 .indicators > button.active {
   background-color: #141824;
   border-color: white;
 }
 
-.indicators > .left-btn{
+.indicators > .left-btn {
   margin-left: 30px;
   margin-right: 30px;
   background-color: #00a0ff;
@@ -70,7 +67,13 @@ button:hover{
   border-radius: 7px;
 }
 
-.indicators > .left-btn:hover{
+.indicators > .left-btn:hover {
   background-color: #141824;
 }
-
+@media screen and (max-width: 768px) {
+  .event_description {
+    white-space: normal;
+    font-size: 0.4rem;
+    padding: 20px 0;
+  }
+}
