--- a/src/Components/Contact2/contact2.css
+++ b/src/Components/Contact2/contact2.css
@@ -38,10 +38,9 @@
 @media(max-width: 600px) {
     .contact_btn_home{
         /*  */
-        height: 19vh;
+        height: 165px;
     }
     .contact-us-btn-text{
-      margin-top: 10px;
         font-size: 17px;
     }
 }
