--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -28,7 +28,9 @@
   background-color: transparent;
   color: #fff;
 }
-
+.events-upcoming-events{
+    white-space: nowrap;
+}
 .indicators {
   display: flex;
   justify-content: center;
