landing slide fixed

--- a/src/Components/LandingSlide/LandingSlide.css
+++ b/src/Components/LandingSlide/LandingSlide.css
@@ -57,6 +57,9 @@
     /* margin-top: 20px; */
     text-align: center;
   }
+  .animation {
+    height: 400px;
+  }
 }
 
 @keyframes logoAnimHover {
