Contact Home About and Testimonials

--- a/src/Components/Home About Us/Home-aboutus.css
+++ b/src/Components/Home About Us/Home-aboutus.css
@@ -83,7 +83,9 @@
   margin: 20px 0;
   position: relative;
 }
-
+.home-about-slider-image-container{
+    text-decoration: none;
+}
 .div1 {
   height: 250px;
   padding-bottom: 10px;
